--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -311,6 +311,8 @@ windows:
     - set LIB=C:\vs2015\VC\lib;C:\Program Files (x86)\Windows Kits\10\Lib\10.0.10240.0\ucrt\x64
     - set RUST_BACKTRACE=1
     - set RUSTFLAGS=%RUSTFLAGS% -Zorbit=off -D warnings
+    - set HOST_CC=x86_64-pc-windows-msvc
+    - set HOST_CXX=x86_64-pc-windows-msvc
     - rustup default stable-x86_64-pc-windows-msvc
     - cargo build --release --verbose
     - curl -sL --url "https://github.com/ethcore/win-build/raw/master/SimpleFC.dll" -o nsis\SimpleFC.dll
