--- a/ethcore/Cargo.toml
+++ b/ethcore/Cargo.toml
@@ -37,7 +37,7 @@ ethkey = { path = "../ethkey" }
 ethcore-ipc-nano = { path = "../ipc/nano" }
 rlp = { path = "../util/rlp" }
 rand = "0.3"
-lru-cache = { git = "https://github.com/contain-rs/lru-cache" }
+lru-cache = "0.1.0"
 ethcore-bloom-journal = { path = "../util/bloom" }
 byteorder = "0.5"
 
