--- a/js/package.json
+++ b/js/package.json
@@ -27,7 +27,6 @@
     "build:app": "webpack --progress",
     "build:lib": "webpack --config webpack.libraries --progress",
     "build:dll": "webpack --config webpack.vendor --progress",
-
     "ci:build": "npm run ci:build:dll && npm run ci:build:app && npm run ci:build:lib",
     "ci:build:app": "NODE_ENV=production webpack",
     "ci:build:lib": "NODE_ENV=production webpack --config webpack.libraries",
@@ -133,6 +132,7 @@
     "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-tooltip": "^2.0.3",
+    "recharts": "^0.15.2",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-thunk": "^2.1.0",
