--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -380,8 +380,8 @@ test-windows:
   before_script:
     - git submodule update --init --recursive
   script:
-    - export RUST_BACKTRACE=1
-    - ./test.sh --verbose
+    - set RUST_BACKTRACE=1
+    - PowerShell ./test.sh --verbose
   tags:
     - rust-windows
   dependencies:
