Align tag inputs with other input boxes (#2965)
* Wrap tag input component

* Postcss nested selectors

* Chips has same size as in ui

* Input matches with sizes/paddings of others

* Adjust colours, move hint text

* Added ChipInput from search in wrapper

* Using InputChip Wrapper in search (#2965)

--- a/js/package.json
+++ b/js/package.json
@@ -92,6 +92,7 @@
     "nock": "^8.0.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.8.1",
+    "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "react-addons-test-utils": "^15.3.0",
     "react-copy-to-clipboard": "^4.2.3",
