--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -369,12 +369,12 @@ test-windows:
     - git submodule update --init --recursive
   script:
     - set RUST_BACKTRACE=1
-    - set TARGETS="-p rlp	-p ethash -p ethcore -p ethcore-bigint -p ethcore-dapps -p ethcore-rpc -p ethcore-signer -p ethcore-util -p ethcore-network -p ethcore-io -p ethkey -p ethstore -p ethsync -p ethcore-ipc -p ethcore-ipc-tests -p ethcore-ipc-nano -p parity"
+    - set TARGETS=%-p rlp -p ethash -p ethcore -p ethcore-bigint -p ethcore-dapps -p ethcore-rpc -p ethcore-signer -p ethcore-util -p ethcore-network -p ethcore-io -p ethkey -p ethstore -p ethsync -p ethcore-ipc -p ethcore-ipc-tests -p ethcore-ipc-nano -p parity%
     - cargo test --features json-tests %TARGETS% %CARGOFLAGS% --verbose --release
   tags:
     - rust-windows
 test-linux:
-  stage: test
+  stage: build
   before_script:
     - git submodule update --init --recursive
   script:
@@ -382,8 +382,6 @@ test-linux:
     - ./test.sh $CARGOFLAGS --no-release
   tags:
     - rust-test
-  dependencies:
-    - linux-stable
 js-release:
   stage: build
   image: ethcore/javascript:latest
