--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 stages:
   - build
-  - test
 variables:
   GIT_DEPTH: "3"
   SIMPLECOV: "true"
@@ -369,8 +368,7 @@ test-windows:
     - git submodule update --init --recursive
   script:
     - set RUST_BACKTRACE=1
-    - set TARGETS=%-p rlp -p ethash -p ethcore -p ethcore-bigint -p ethcore-dapps -p ethcore-rpc -p ethcore-signer -p ethcore-util -p ethcore-network -p ethcore-io -p ethkey -p ethstore -p ethsync -p ethcore-ipc -p ethcore-ipc-tests -p ethcore-ipc-nano -p parity%
-    - cargo test --features json-tests %TARGETS% %CARGOFLAGS% --verbose --release
+    - cargo test --features json-tests -p rlp -p ethash -p ethcore -p ethcore-bigint -p ethcore-dapps -p ethcore-rpc -p ethcore-signer -p ethcore-util -p ethcore-network -p ethcore-io -p ethkey -p ethstore -p ethsync -p ethcore-ipc -p ethcore-ipc-tests -p ethcore-ipc-nano -p parity %CARGOFLAGS% --verbose --release
   tags:
     - rust-windows
 test-linux:
@@ -395,7 +393,7 @@ js-release:
   tags:
     - javascript
 js-lint:
-  stage: test
+  stage: build
   image: ethcore/javascript:latest
   before_script:
     - ./js/scripts/install-deps.sh
@@ -404,7 +402,7 @@ js-lint:
   tags:
     - javascript-test
 js-test:
-  stage: test
+  stage: build
   image: ethcore/javascript:latest
   before_script:
     - ./js/scripts/install-deps.sh
@@ -413,7 +411,7 @@ js-test:
   tags:
     - javascript-test
 js-pack:
-  stage: test
+  stage: build
   image: ethcore/javascript:latest
   before_script:
     - ./js/scripts/install-deps.sh
