--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -371,6 +371,7 @@ test-windows:
     - cargo test --features json-tests -p rlp -p ethash -p ethcore -p ethcore-bigint -p ethcore-dapps -p ethcore-rpc -p ethcore-signer -p ethcore-util -p ethcore-network -p ethcore-io -p ethkey -p ethstore -p ethsync -p ethcore-ipc -p ethcore-ipc-tests -p ethcore-ipc-nano -p parity %CARGOFLAGS% --verbose --release
   tags:
     - rust-windows
+  allow_failure: true
 test-linux:
   stage: build
   before_script:
