Adding HTML Loader for Webpack for image linking

--- a/js/package.json
+++ b/js/package.json
@@ -75,12 +75,13 @@
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^2.0.0",
+    "extract-loader": "0.0.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "fs-extra": "^0.30.0",
     "happypack": "^2.2.1",
     "history": "^2.0.0",
-    "html-loader": "^0.4.3",
+    "html-loader": "^0.4.4",
     "ignore-styles": "2.0.0",
     "image-webpack-loader": "^1.8.0",
     "istanbul": "^1.0.0-alpha.2",
