Graphical gas price selection (#2898)
* Added gasPriceStatistics

* WIP graph fas price stats (#2142)

* Chart to select gas price in Extra Tx (#2142)

* Gas Selection UI

* Gas Price Selection: better UI (right octiles, point on graph) (#2142)

* Gas Price Selection chart update using D3 (#2142)

* Working UI, more fluid... (#2142)

* Using the new gasPriceHistogram Call: display histogram (#2142)

* Code Clean

* Updated gas Selection explaination

* PR grumble // Gas Price Selector (#2898)

* Fixing linting issues

--- a/js/package.json
+++ b/js/package.json
@@ -113,6 +113,7 @@
     "bignumber.js": "^2.3.0",
     "blockies": "0.0.2",
     "bytes": "^2.4.0",
+    "chart.js": "^2.3.0",
     "es6-promise": "^3.2.1",
     "file-saver": "^1.3.3",
     "format-json": "^1.0.3",
@@ -128,12 +129,14 @@
     "qs": "^6.3.0",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
+    "react-chartjs-2": "^1.5.0",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-tooltip": "^2.0.3",
+    "recharts": "^0.15.2",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-thunk": "^2.1.0",
