--- a/js/package.json
+++ b/js/package.json
@@ -40,7 +40,8 @@
     "lint:cached": "eslint --cache --ignore-path .gitignore ./src/",
     "test": "mocha 'src/**/*.spec.js'",
     "test:coverage": "istanbul cover _mocha -- 'src/**/*.spec.js'",
-    "test:e2e": "mocha 'src/**/*.e2e.js'"
+    "test:e2e": "mocha 'src/**/*.e2e.js'",
+    "postinstall": "cp scripts/pre-push ../.git/hooks/"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
