--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ rlp = { path = "util/rlp" }
 ethcore-stratum = { path = "stratum" }
 ethcore-dapps = { path = "dapps", optional = true }
 clippy = { version = "0.0.103", optional = true}
+rpc-cli = { path = "rpc_cli" }
+parity-rpc-client = { path = "rpc_client" }
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.2"
