Resolve IPC issues

--- a/ipc/tests/with_attrs.rs.in
+++ b/ipc/tests/with_attrs.rs.in
@@ -21,7 +21,7 @@ use std::collections::VecDeque;
 
 pub struct BadlyNamedService;
 
-#[derive(Ipc)]
+//#[derive(Ipc)]
 #[ipc(client_ident="PrettyNamedClient")]
 impl BadlyNamedService {
 	fn is_zero(&self, x: u64) -> bool {
