Push precompiled for beta/stable, npm only master

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -383,6 +383,8 @@ js-release:
   image: ethcore/javascript:latest
   only:
     - master
+    - beta
+    - stable
   before_script:
     - ./js/scripts/install-deps.sh
   script:
