--- a/js/package.json
+++ b/js/package.json
@@ -130,6 +130,7 @@
     "qs": "^6.3.0",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
+    "react-addons-perf": "^15.3.2",
     "react-chartjs-2": "^1.5.0",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
