--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ linux-stable:
   stage: build
   image: ethcore/rust:stable
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -44,6 +45,7 @@ linux-stable-14.04:
   stage: build
   image: ethcore/rust-14.04:latest
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -73,6 +75,7 @@ linux-beta:
   stage: build
   image: ethcore/rust:beta
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -91,6 +94,7 @@ linux-nightly:
   stage: build
   image: ethcore/rust:nightly
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -133,6 +137,7 @@ linux-armv7:
   stage: build
   image: ethcore/rust-armv7:latest
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -172,6 +177,7 @@ linux-arm:
   stage: build
   image: ethcore/rust-arm:latest
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -211,6 +217,7 @@ linux-armv6:
   stage: build
   image: ethcore/rust-armv6:latest
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -243,6 +250,7 @@ linux-aarch64:
   stage: build
   image: ethcore/rust-aarch64:latest
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -281,6 +289,7 @@ linux-aarch64:
 darwin:
   stage: build
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -301,6 +310,7 @@ darwin:
 windows:
   stage: build
   only:
+    - $NIGHTLY
     - beta
     - tags
     - stable
@@ -350,9 +360,7 @@ windows:
 test-darwin:
   stage: test
   only:
-    - beta
-    - tags
-    - stable
+    - $NIGHTLY
   before_script:
     - git submodule update --init --recursive
   script:
@@ -363,9 +371,7 @@ test-darwin:
 test-windows:
   stage: test
   only:
-    - beta
-    - tags
-    - stable
+    - $NIGHTLY
   before_script:
     - git submodule update --init --recursive
   script:
@@ -403,6 +409,7 @@ js-tests:
 js-release:
   stage: js-build
   only:
+    - $NIGHTLY
     - master
     - beta
     - stable
