--- a/rpc/src/v1/types/mod.rs.in
+++ b/rpc/src/v1/types/mod.rs.in
@@ -35,7 +35,7 @@ mod work;
 mod histogram;
 
 pub use self::bytes::Bytes;
-pub use self::block::{Block, BlockTransactions};
+pub use self::block::{RichBlock, Block, BlockTransactions};
 pub use self::block_number::BlockNumber;
 pub use self::call_request::CallRequest;
 pub use self::confirmations::{ConfirmationPayload, ConfirmationRequest, TransactionModification};
