--- a/js/package.json
+++ b/js/package.json
@@ -1,11 +1,13 @@
 {
   "name": "parity.js",
-  "version": "0.1.63",
+  "version": "0.2.0",
   "main": "release/index.js",
   "jsnext:main": "src/index.js",
   "author": "Parity Team <admin@parity.io>",
   "maintainers": [
-    "Jaco Greeff"
+    "Jaco Greeff",
+    "Nicolas Gotchac",
+    "Jannis Redmann"
   ],
   "contributors": [],
   "license": "GPL-3.0",
