--- a/js/package.json
+++ b/js/package.json
@@ -23,16 +23,16 @@
     "Promise"
   ],
   "scripts": {
-    "build": "npm run build:dll && npm run build:app && npm run build:lib",
+    "build": "npm run build:lib && npm run build:dll && npm run build:app",
     "build:app": "webpack --progress",
     "build:lib": "webpack --config webpack.libraries --progress",
     "build:dll": "webpack --config webpack.vendor --progress",
-    "ci:build": "npm run ci:build:dll && npm run ci:build:app && npm run ci:build:lib",
+    "ci:build": "npm run ci:build:lib && npm run ci:build:dll && npm run ci:build:app",
     "ci:build:app": "NODE_ENV=production webpack",
     "ci:build:lib": "NODE_ENV=production webpack --config webpack.libraries",
     "ci:build:dll": "NODE_ENV=production webpack --config webpack.vendor",
     "ci:build:npm": "NODE_ENV=production webpack --config webpack.npm",
-    "start": "npm install && npm run build:dll && npm run start:app",
+    "start": "npm install && npm run build:lib && npm run build:dll && npm run start:app",
     "start:app": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3000",
     "clean": "rm -rf ./build ./coverage",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
