--- a/js/package.json
+++ b/js/package.json
@@ -115,6 +115,7 @@
   "dependencies": {
     "bignumber.js": "^2.3.0",
     "blockies": "0.0.2",
+    "brace": "^0.9.0",
     "bytes": "^2.4.0",
     "chart.js": "^2.3.0",
     "es6-promise": "^3.2.1",
@@ -131,6 +132,7 @@
     "moment": "^2.14.1",
     "qs": "^6.3.0",
     "react": "^15.2.1",
+    "react-ace": "^4.0.0",
     "react-addons-css-transition-group": "^15.2.1",
     "react-chartjs-2": "^1.5.0",
     "react-dom": "^15.2.1",
