--- a/js/package.json
+++ b/js/package.json
@@ -118,6 +118,8 @@
     "bytes": "^2.4.0",
     "chart.js": "^2.3.0",
     "es6-promise": "^3.2.1",
+    "ethereumjs-tx": "^1.1.2",
+    "ethereumjs-util": "^4.5.0",
     "file-saver": "^1.3.3",
     "format-json": "^1.0.3",
     "format-number": "^2.0.1",
@@ -144,6 +146,7 @@
     "redux-actions": "^0.10.1",
     "redux-thunk": "^2.1.0",
     "rlp": "^2.0.0",
+    "scryptsy": "^2.0.0",
     "store": "^1.3.20",
     "utf8": "^2.1.1",
     "validator": "^5.7.0",
